Fix scrollbar on internal (non-parallax) pages not inheriting the custom styles, also restore original width for accessibility

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -162,18 +162,21 @@ ul {
 }
 
 .container {
-    margin: 20px;
+    padding: 20px;
 }
 
 .parallax-container {
-    background-color: cyan;
     animation: 0.6s background-fade-in 1 6s backwards;
+}
+
+.parallax-container, html {
+    background-color: cyan;
 
     scrollbar-color: cyan black;
-    scrollbar-width: thin;
+    // scrollbar-width: thin;
 
     &::-webkit-scrollbar {
-        width: 8px;
+        // width: 8px;
         background-color: black;
     }
 
